# Nightmare-stay-alive

./: CMakeLists.txt  Leaderboard.txt  README.md  main.cpp
Auxiliar_Headers/: LinkedList.h  Multimedia.h  Node.h
Entities/: Bullet.h  Bullets.h  Enemies.h  Player.h
Headers/: Enemies.h  Game.h  Map.h  TiledMap.h
SourceFiles/: Bullet.cpp  Bullets.cpp  Enemies.cpp  Game.cpp  Map.cpp  Player.cpp
assets/: AssetManager.h  map2.tmx  mapa1.tmx
docs/: especificacion.juego.md  especificacion.md  especificacion.simulacion.md
